--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,19 @@
-body {
-    background-color:hsl(330,100%,100%);
-    background-image: url("./images/hero-desktop.jpg");
-    font-size: 16px;
+@font-face {
+    font-family: "Josefin Sans" ;
+    src: url("https://fonts.google.com/specimen/Josefin+Sans");
 }
 
+.container {
+    background-color:hsl(330,100%,100%);
+    display: flex;
+    flex-direction: row;
+    font-family: Josefin Sans;
+    font-size: 16px;
+    padding: 50px; 
+   
+}
 
 p {
     color:hsl(0, 36%, 70%) ; 
-  font-family: Josefin Sans;
-  src:url(https://fonts.google.com/specimen/Josefin+Sans) ;  
-  
- 
+
 }
