--- a/styles.css
+++ b/styles.css
@@ -7,30 +7,49 @@
     src: url("https://fonts.google.com/specimen/Josefin+Sans");
 }
 
+body{
+    background-color:hsl(330,100%,100%);
+    background-image:url(./images/bg-pattern-desktop.svg) 
+}
 .container {
-    /*background-color:hsl(330,100%,100%);*/
-    background-image:url(./images/bg-pattern-desktop.svg) ;
     display: flex;
     flex-direction: row;
     font-family: 'Josefin Sans', sans-serif;
     font-size: 16px;
-    font-weight: 200;
-   align-items: center; 
+    font-weight: 400;
+    align-items: center; 
    
 }
 
-/*.annoucement{
-   word-spacing: 4rem;
-   font-weight: 400;
-}*/
 
-p {
-    color:hsl(0, 36%, 70%) ; 
+h1 span {
+    color:hsl(0, 36%, 70%);
 
 }
 
-#round-edges {
-    background-color: hsl(0, 36%, 70%);
-    border-radius: 2rem;
+p {
+    color:hsl(0, 36%, 70%) ;
+    padding: .5rem;
+  
+
+}
+
+.round-edges {
+    background-color:hsl(330,100%,100%);
+    border: 1.5px solid hsl(0, 36%, 70%, 25%); 
+    border-radius: 10rem;
+    padding: .25rem;
     
+    /*background-image:url(./images/icon-arrow.svg);*/
+    
+}
+
+form > input:focus {
+    border: 3 px solid red;
+}
+
+form > input:last-child{
+    background-color: (0, 36%, 70%);
+    background-image:image(icon-arrow);
+
 }
