--- a/styles.css
+++ b/styles.css
@@ -12,26 +12,38 @@ body{
 }
 
 .container {
-    display: grid;
-    grid-template-rows: auto auto;
+    display: flex; 
+}
+
+#container-right {
     color:hsl(0, 36%, 70%);
     font-family: 'Josefin Sans', sans-serif;
     font-size: 16px;
     font-weight: 400;
+   
+
 }
+
+
 h1{
     color: black;
+    letter-spacing: .75rem;
+    line-height: 2.25rem;
+    font-weight: 600;
 }
+
 
 h1 span {
     color: hsl(0, 36%, 70%);
-    font-weight: 10;
-   
+    font-weight: 300;
 }
 
 p {
     color:hsl(0, 36%, 70%) ;
     padding: .5rem;
+    line-height: 2rem;
+   
+    
 }
 
 .round-edges {
@@ -39,6 +51,7 @@ p {
     border: 1.5px solid hsl(0, 36%, 70%, 25%); 
     border-radius: 10rem;
     padding: .25rem;
+  
     
     /*background-image:url(./images/icon-arrow.svg);*/ 
 }
