--- a/styles.css
+++ b/styles.css
@@ -1,27 +1,28 @@
 @font-face {
     font-family: 'Josefin Sans' ;
-    src: url("https://fonts.google.com/specimen/Josefin+Sans");
+    src: url ("https://fonts.google.com/specimen/Josefin+Sans");
 }
-body{
+
+      body{
     background-color:hsl(330,100%,100%);
     background-image:url(./images/bg-pattern-desktop.svg);
     color:hsl(0, 36%, 70%);
-    font-family: 'Josefin Sans', sans-serif;
+    font-family: 'Josefin Sans', sans-serif, serif;
     font-size: 16px;
     font-weight: 400;
 }
 
 .container {
     display: flex; 
+    justify-content: center;
 }
+
 
 #container-right {
     color:hsl(0, 36%, 70%);
     font-family: 'Josefin Sans', sans-serif;
     font-size: 16px;
     font-weight: 400;
-   
-
 }
 
 
@@ -51,8 +52,6 @@ p {
     border: 1.5px solid hsl(0, 36%, 70%, 25%); 
     border-radius: 10rem;
     padding: .25rem;
-  
-    
     /*background-image:url(./images/icon-arrow.svg);*/ 
 }
 
