--- a/styles.css
+++ b/styles.css
@@ -8,41 +8,49 @@
     background-image:url(./images/bg-pattern-desktop.svg);
     color:hsl(0, 36%, 70%);
     font-family: 'Josefin Sans', sans-serif, serif;
-    font-size: 16px;
-    font-weight: 400;
+    
 }
 
 .container {
-    display: flex; 
-    justify-content: center;
+   display: flex; 
+   
+
 }
 
 
 #container-right {
     color:hsl(0, 36%, 70%);
     font-family: 'Josefin Sans', sans-serif;
-    font-size: 16px;
-    font-weight: 400;
+    padding: 3rem;
 }
+
 
 
 h1{
     color: black;
     letter-spacing: .75rem;
     line-height: 2.25rem;
-    font-weight: 600;
+    font-weight:600; 
+    padding: 3rem;
+   
+    
+    
+    
 }
 
 
 h1 span {
     color: hsl(0, 36%, 70%);
-    font-weight: 300;
+    
 }
 
 p {
     color:hsl(0, 36%, 70%) ;
-    padding: .5rem;
+    font-size: 16px;
+    font-weight: 300;
     line-height: 2rem;
+   
+    
    
     
 }
@@ -60,7 +68,7 @@ form > input:focus {
 }
 
 form > input:last-child{
-    background-color: (0, 36%, 70%);
-    background-image:image(icon-arrow);
+    background-color:hsl(0, 93%, 68%);
+    background-image: url(./images/icon-arrow.svg);
 
 }
