--- a/styles.css
+++ b/styles.css
@@ -4,31 +4,30 @@
 }
 
 body{
-    background-color:hsl(330,100%,100%);
-    background-image:url(./images/bg-pattern-desktop.svg);
+    background: url(./images/bg-pattern-desktop.svg) no-repeat center/cover;
     color:hsl(0, 36%, 70%);
     font-family: 'Josefin Sans', sans-serif, serif;
 }
 
 .container {
    display: flex; 
-
+   column-gap: 6rem;
 }
 
-#container-right {
+.container-right {
     color:hsl(0, 36%, 70%);
     font-family: 'Josefin Sans', sans-serif;
     padding: 3rem;
+    padding-left: 5rem;
 }
 
 h1{
-    color: black;
+    color: hsl(0, 6%, 24%);
     letter-spacing: .75rem;
     line-height: 2.25rem;
     font-weight:600; 
-    padding: 3rem;
+    padding-top: 3rem;
 }
-
 
 h1 span {
     color: hsl(0, 36%, 70%);   
@@ -39,23 +38,53 @@ p {
     color:hsl(0, 36%, 70%) ;
     font-size: 16px;
     font-weight: 400;
-    line-height: 2rem; 
+    line-height: 1.5rem; 
+    padding-bottom: 1rem;
 }
 
 .round-edges {
-    background-color:hsl(330,100%,100%);
     border: 1.5px solid hsl(0, 36%, 70%, 25%); 
-    border-radius: 10rem;
-    padding: .25rem;
-    /*background-image:url(./images/icon-arrow.svg);*/ 
+    border-radius: 2rem;
+}
+
+form {
+    display: flex;
+   
+}
+
+form input {
+    border: 1px solid hsl(0, 6%, 24%);
+    border-radius: 2rem;
+    font-family: 'Josefin Sans';
+    padding: .5rem 1rem;
+    width: 100%; 
+}
+
+form input::placeholder{
+    color:hsl(0, 6%, 24%);
 }
 
 form > input:focus {
-    border: 3 px solid red;
+    border: 2px solid hsl(0, 93%, 68%);
 }
 
-form > input:last-child{
-    background-color:hsl(0, 93%, 68%);
-    background-image: url(./images/icon-arrow.svg);
+button{
+    background-image: linear-gradient(
+        135deg,
+    hsl(0, 0%, 100%), 
+    hsl(0, 74%, 74%)
+    );
+    border: none;
+    border-radius: 1.5rem;
+    box-shadow: 0px 8px 2.5px hsla(0, 36%, 70%, 25%);
+    padding: .75rem 2rem;
+    
+    }
 
+.error-message{
+    color:hsl(0, 93%, 68%); 
+    font-family: 'Josefin Sans';
+    font-size: 10px;
+    padding-left: 1.5rem;
 }
+
