--- a/styles.css
+++ b/styles.css
@@ -47,17 +47,18 @@ p {
     border-radius: 2rem;
 }
 
-form {
-    display: flex;
-   
-}
 
+form{
+    position: absolute;
+    display: flex;
+}
 form input {
     border: 1px solid hsl(0, 6%, 24%);
     border-radius: 2rem;
     font-family: 'Josefin Sans';
-    padding: .5rem 1rem;
-    width: 100%; 
+    padding: .75rem 1rem;
+    width: 15rem;
+     
 }
 
 form input::placeholder{
@@ -66,7 +67,7 @@ form input::placeholder{
 
 form > input:focus {
     border: 2px solid hsl(0, 93%, 68%);
-}
+}   
 
 button{
     background-image: linear-gradient(
@@ -77,9 +78,12 @@ button{
     border: none;
     border-radius: 1.5rem;
     box-shadow: 0px 8px 2.5px hsla(0, 36%, 70%, 25%);
-    padding: .75rem 2rem;
+    padding: .5rem 2rem; 
+    transform: translateX(-60px);
+  
     
-    }
+
+}
 
 .error-message{
     color:hsl(0, 93%, 68%); 
