--- a/styles.css
+++ b/styles.css
@@ -85,5 +85,10 @@ form > input:focus {
 }
 
 .error{
-    border: solid 2px red; 
+    border: solid 2px red;
+      
+}
+
+#error-message {
+    color: red;
 }
