--- a/styles.css
+++ b/styles.css
@@ -37,9 +37,10 @@ h1 span {
 p {
     color:hsl(0, 36%, 70%) ;
     font-size: 16px;
-    font-weight: 400;
+    font-weight: 400bold;
     line-height: 1.5rem; 
     padding-bottom: 1rem;
+    
 }
 
 .round-edges {
@@ -80,11 +81,12 @@ form > input:focus {
     border: none;
     border-radius: 1.5rem;
     box-shadow: 0px 15px 10px hsla(0, 36%, 70%, 40%);
-    transform: translateX(-50px);
+    transform: translateX(-30px);
     width: 75px;
 }
 .submit-arrow{
-    transform: translateX(-90px);
+    padding:.75rem 0;
+    transform: translateX(-70px);
     
 }
 .error{
@@ -94,4 +96,5 @@ form > input:focus {
 
 #error-message {
     color:hsl(0, 93%, 68%);
+    padding-left: 1.15rem;
 }
