--- a/styles.scss
+++ b/styles.scss
@@ -45,7 +45,7 @@ body{
 }
 
 .round-edges {
-    border: 1.5px solid hsl(0, 36%, 70%, 25%); 
+    border: 1.5px solid (0, 36%, 70%, 25%); 
     border-radius: 2rem;
 }
 
